--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": " src/app.js",
+      "src": "dist/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+      "dest": "dist/server.js"
     }
   ]
 }
